tests/baselines/reference/duplicatePropertyNames.errors.txt
==== tests/cases/compiler/duplicatePropertyNames.ts (11 errors) ====
    // duplicate property names are an error in all types
    
    interface Number {
        foo: string;
        foo: string;
        ~~~
!!! error TS2000: Duplicate identifier 'foo'.
    }
    
    interface String {
        foo(): string;
        foo(): string;
        ~~~~~~~~~~~~~
!!! error TS2144: Duplicate overload signature for 'foo'.
    }
    
    interface Array<T> {
        foo: T;
        foo: T;
        ~~~
!!! error TS2000: Duplicate identifier 'foo'.
    }
    
    class C {
        foo: string;
        foo: string;
        ~~~
!!! error TS2000: Duplicate identifier 'foo'.
    
        bar(x) { }
        bar(x) { }
        ~~~~~~~~~~
!!! error TS2000: Duplicate identifier 'bar'.
    
        baz = () => { }
        baz = () => { }
        ~~~
!!! error TS2000: Duplicate identifier 'baz'.
    }
    
    interface I {
        foo: string;
        foo: string;
        ~~~
!!! error TS2000: Duplicate identifier 'foo'.
    }
    
    var a: {
        foo: string;
        foo: string;
        ~~~
!!! error TS2000: Duplicate identifier 'foo'.
    
        bar: () => {};
        bar: () => {};
        ~~~
!!! error TS2000: Duplicate identifier 'bar'.
    }
    
    var b = {
        foo: '',
        foo: '',
        ~~~~~~~
!!! error TS2000: Duplicate identifier 'foo'.
        bar: () => { },
        bar: () => { }
        ~~~~~~~~~~~~~~
!!! error TS2000: Duplicate identifier 'bar'.
    }
    